# kali-linux-projects

./: CHANGELOG.md  README.md  coverage.xml  nodejs.sh  setup.sh
Python/: Library.py  __init__.py  cli.py
Python/tests/: test_library.py
deckofcards/: README.md  pyproject.toml  setup.cfg
deckofcards/.github/workflows/: ci.yml
deckofcards/deckofcards/: __init__.py  classic.py  collection.py
deckofcards/deckofcards.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deckofcards/moved_from_workspace/: DeckOfCards.py  DeckofCards2.py
deckofcards/tests/: test_cli.py  test_deck.py  test_edge_cases.py
library.egg-info/: PKG-INFO
python_library.egg-info/: PKG-INFO
secure-task-manager/backend/: .env
secure-task-manager/backend/src/: database.js  index.js
secure-task-manager/frontend/src/: App.jsx
